tests/ui/borrowck/borrowck-closures-mut-of-imm.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-closures-mut-of-imm.rs:9:25
   |
LL |     let mut c1 = || set(&mut *x);
   |                         ^^^^^^^ cannot borrow as mutable

error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-closures-mut-of-imm.rs:11:25
   |
LL |     let mut c2 = || set(&mut *x);
   |                         ^^^^^^^ cannot borrow as mutable

error[E0524]: two closures require unique access to `x` at the same time
  --> $DIR/borrowck-closures-mut-of-imm.rs:11:18
   |
LL |     let mut c1 = || set(&mut *x);
   |                  --          -- first borrow occurs due to use of `x` in closure
   |                  |
   |                  first closure is constructed here
LL |
LL |     let mut c2 = || set(&mut *x);
   |                  ^^          -- second borrow occurs due to use of `x` in closure
   |                  |
   |                  second closure is constructed here
...
LL |     c2(); c1();
   |           -- first borrow later used here

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0524, E0596.
For more information about an error, try `rustc --explain E0524`.
